font family & color imported

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
 
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap');
+
 *,
 *::after,
 *::before {
@@ -7,6 +9,14 @@
   padding: 0;
   box-sizing: border-box;
   outline: none;
+}
+
+:root{
+  --clr-output-font-family: 'Orbitron', sans-serif;
+  --crl-cal-bg: #14213d ;
+  --crl-orange: #eb5e28;
+  --crl-white: #ffffff;
+  --crl-black:#000000;
 }
 
 html {
